# hackathon-template

./: .gitignore  README.MD
fastapi/: .env.example  Dockerfile  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
fastapi/alembic/: env.py
fastapi/core/: celery_app.py  config.py  database.py  deps.py  security.py  tokens.py
fastapi/models/: refresh_token.py  user.py
fastapi/routers/: __init__.py  auth.py  users.py  ws.py
fastapi/schemas/: auth.py  user.py
fastapi/services/: __init__.py  auth_service.py  email_service.py  email_tasks.py  token_service.py  user_service.py
graphify-out/: .graphify_ast.json  .graphify_chunk_01.json  .graphify_chunk_02.json  .graphify_chunk_03.json  .graphify_chunk_04.json  .graphify_chunk_plan.json  .graphify_detect.json  .graphify_meta.json  .graphify_python  .graphify_root  .graphify_uncached.txt
graphify-out/cache/: stat-index.json
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  eslint.config.js  graphifyignore  jest.config.mjs  nodemon.json  package.json  prisma.config.ts  tsconfig.json
server/prisma/: schema.prisma
server/scripts/: dev-all.sh  local.sh  test.sh
server/src/: app.ts  constant.ts  server.ts  worker.ts
server/tests/: auth.test.ts
web/: .dockerignore  .env.example  .graphifyignore  Dockerfile  README.md  next.config.ts  package.json  proxy.ts
web/app/: globals.css  layout.tsx  page.tsx
web/components/: Footer.tsx  Header.tsx  Logo.tsx  SIgnInButton.tsx  UserAvatarMenu.tsx
web/context/: auth.context.ts
web/hooks/: index.ts  useDebounce.ts
(+71 files in other folders)
