[project]
name = "fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "alembic==1.13.1",
    "asyncpg==0.31.0",
    "authlib==1.3.0",
    "celery[redis]==5.4.0",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "itsdangerous==2.2.0",
    "passlib[bcrypt]==1.7.4",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.9",
    "redis==5.0.4",
    "sqlalchemy==2.0.30",
    "starlette==0.37.2",
    "uvicorn[standard]==0.29.0",
]

[tool.uv.sources]
fastapi = { workspace = true }
